# lofar-h5plot-rs

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
lofar-h5plot/: package.json
lofar-h5plot/src/: main.ts  styles.css
lofar-h5plot/src-tauri/: Cargo.toml
lofar-h5plot/src-tauri/src/: lib.rs  main.rs
src/: api.js  main.rs  main.ts  main.ts.backup  styles.css
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
ui/: gui.slint
